--- a/news.html
+++ b/news.html
@@ -379,7 +379,7 @@
               <a href="https://tokyo.slush.org" target="_blank" class="button blue gradient button-buy-97">イベントページ</a>
             </h2>
           </div>
-          <div class="frame-97 ae-4 padding-top-3 padding-bottom-3 margin-top-2">
+          <div class="frame-97 ae-4 padding-bottom-3 margin-top-2">
             <p class="white calendar-97 absolute"><span class="center uppercase block bold month">feb</span><span class="number regular">3</span></p>
             <h2 class="small align-left cropBottom inline-block padding-top-1">
               <span class="light margin-left-10 margin-left-phablet-0 title-group">ISPO Munich 2019</span>
