--- a/profile.html
+++ b/profile.html
@@ -340,6 +340,7 @@
     <a href="index.html" class="logo ae-1"><svg width="140" height="36"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use></svg></a>
     <ul class="mainMenu margin-top-3 ae-2">
       <li><a href="#team">開発運営チーム</a></li>
+      <li><a href="#awards">アワード</a></li>
       <li><a href="#contact">コンタクト</a></li>
       <li><a href="#contact">採用情報</a></li>
     </ul>
@@ -477,6 +478,45 @@
   <div class="background" style="background-image:url(assets/img/background/img-8-1.jpg)"></div>
 </section>
 
+<!-- Slide 7 -->
+<section data-title="アワード" class="slide fade-6 kenBurns" id="awards">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+      
+        <div class="fix-10-12 toCenter">
+          <h1 class="ae-1">Awards</h1>
+          <p class="ae-2"><span class="opacity-8">多数あるプロダクトの中から多くのアワードを授賞</span></p>
+
+          <!-- remove class tintLogos class to disable color change of the logo images -->
+          <ul class="flex grid-68 tintLogos equal equalMobile margin-top-6">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+              <div class="table wide equalElement ae-3">
+                <div class="cell"><img width="164" src="assets/img/ispo-brandnew-logo-web.png">
+                </div>
+              </div>
+            </li>
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+              <div class="table wide equalElement ae-4">
+                <div class="cell"><img width="164" src="assets/img/Intel-Make-It-Wearable-JUUCHINI.png">
+                </div>
+              </div>
+            </li>
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+              <div class="table wide equalElement ae-5">
+                <div class="cell"><img width="164" src="assets/img/logo_pioneers_festival.png">
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+                
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/background/img18.png)"></div>
+</section>
+
 <!-- Slide  -->
 <section data-title="コンタクト" class="slide fade-6 kenBurns" id="contact">
   <div class="content">
@@ -573,6 +613,7 @@
     <div class="right">
       <ul class="menu uppercase trim">
         <li><a href="#team">開発運営チーム</a></li>
+        <li><a href="#awards">アワード</a></li>
         <li><a href="#contact">コンタクト</a></li>
         <li><a href="#joinus">採用情報</a></li>
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
